[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/player_v3/spells/Firebolt.gd" type="Script" id=1]
[ext_resource path="res://assets/images/fire_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://assets/images/light.png" type="Texture" id=3]
[ext_resource path="res://src/Sensors/DamageBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/sfx/fireball_enter.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[sub_resource type="Animation" id=2]
resource_name = "loop"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 60 ]
}

[node name="Firebolt" type="Node2D"]
position = Vector2( 20, 7 )
z_index = -1
script = ExtResource( 1 )

[node name="DamageBox" parent="." instance=ExtResource( 4 )]
collision_mask = 1024
damage = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageBox"]
position = Vector2( 11, -1 )
scale = Vector2( 0.690373, 0.690373 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 2 )
vframes = 8
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "loop"
anims/loop = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
rotation = -1.5708
texture = ExtResource( 3 )
texture_scale = 0.07
color = Color( 0.988235, 0.733333, 0.482353, 1 )
energy = 1.4

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 11, -1 )
scale = Vector2( 0.690373, 0.690373 )
stream = ExtResource( 5 )
volume_db = -25.0
pitch_scale = 1.2
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]
[connection signal="area_entered" from="DamageBox" to="." method="_on_collide_area"]
[connection signal="body_entered" from="DamageBox" to="." method="_on_collide_body"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
